# SenID

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
SenD.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  index.md  installation.md  requirements.txt
docs/api/: extrinsic.md  index.md  intrinsic.md  plotting.md  preprocessing.md  senid.md  spatial.md  tools.md
docs/autoapi/senid/: index.rst
docs/autoapi/senid/extrinsic/: index.rst
docs/autoapi/senid/intrinsic/: index.rst
docs/autoapi/senid/plotting/: index.rst
docs/autoapi/senid/preprocessing/: index.rst
docs/autoapi/senid/spatial/: index.rst
docs/autoapi/senid/tools/: index.rst
docs/source/: modules.rst  send.preprocessing.rst  send.rst  send.tools.rst
docs/tutorials/: extrinsic_analysis.md  index.md  intrinsic_analysis.md  spatial_analysis.md
src/SenD.egg-info/: PKG-INFO  SOURCES.txt
src/send/: __init__.py
src/send/preprocessing/: __init__.py  _feature_selection.py  _partition.py
src/send/tools/: __init__.py  _clustering.py  _communication.py  _markers.py
src/senid/: __init__.py
src/senid/data/: human_lr_pairs_and_tfs.csv  mouse_lr_pairs_and_tfs.csv
src/senid/extrinsic/: __init__.py  _communication.py  _extrinsic_analysis.py  _extrinsic_communication.py  _senchat.py
src/senid/intrinsic/: __init__.py  _intrinsic_analysis.py  _intrinsic_preprocessing.py
src/senid/plotting/: _extrinsic.py  _intrinsic.py  _spatial.py
src/senid/preprocessing/: _feature_selection.py
src/senid/spatial/: __init__.py  _spatial_analysis.py  _spatial_communication.py
src/senid/tools/: __init__.py  _markers.py
