[tool.poetry]
name = "SenID"
version = "0.1.1"
description = "A package to identify cell-intrinsic and cell-exrinsic features of cellular senescence and senescence-driven communication."
authors = ["Axel A. Almet"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "senid", from = "src" }]
include = [
  { path = "src/senid/data/**", format = "sdist" },
  { path = "src/senid/data/**", format = "wheel" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
scanpy = "^1.11.0"
joblib = "^1.4.2"
tqdm = "^4.67.1"
numpy = "^1.2.0"
pandas = "^2.2.3"
scipy = "^1.15.2"
monod = "^0.2.9.0"
cnmf = "^1.7.0"
commot = "^0.0.3"
pingouin = "^0.5.5"
squidpy = "^1.6.5"


[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.0"
myst-parser = "^4.0.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-rtd-theme = "^3.0.0"